@@ -1,6 +1,7 @@
 # Scorpio - Addon
 
 ## Create an addon based on the Scorpio
+----
 
 After you download the [PLoop][] and the [Scorpio][] Lib, We can create the addons based on the Scorpio.
 
@@ -40,6 +41,7 @@ After you download the [PLoop][] and the [Scorpio][] Lib, We can create the addo
 
 
 ## Init the main file
+----
 
 Normally to say, you can use the **Scorpio** as a common library, use its api like **Scorpio.Delay**
 directly, but it also provide a special code style that I strongly suggest to use **The declarative
@@ -121,6 +123,7 @@ Here are the rules of the **Scorpio Module System** :
 
 
 ## Handle the System Event
+----
 
 The wow will notify us about what happened in the game world by system events. Like `UNIT_SPELLCAST_START`
 tell us an unit is casting a spell, it also give us several arguments to tell who cast it and which the
@@ -191,6 +194,7 @@ end
 
 
 ## Handle the Combat Log Sub Event
+----
 
 The combat log events contains many sub events, it's not recommend to used `__SystemEvent__` to handle the `COMBAT_LOG_EVENT_UNFILTERED` events. The systen provided another `__CombatEvent__` to handle its sub-events, the usage is just like the `__SystemEvent__`:
 
@@ -203,6 +207,7 @@ So we use the sub-event names like the system event.
 
 
 ## Handle the Secure Hook
+----
 
 A big part in addon development is modifying the wow's original ui. To do it, we need use **Hook** or
 **Secure Hook**.
@@ -290,6 +295,7 @@ know which frame you want modify and then search them in the source.
 
 
 ## Define Slash Commands
+----
 
 The slash commands is a simple way to config the addon, trigger the operations, or open config menus.
 
@@ -380,6 +386,7 @@ end
 
 
 ## The Property of the Addon Module
+----
 
 We have see the usage of the `_Enabled` property, all addon modules has provided several properties, it
 works like how we use the `_G`.
@@ -416,6 +423,7 @@ end)
 
 
 ## The Module Event
+----
 
 Commonly, addons should handle several special events, this is also the life-cycle of the addons:
 
@@ -516,6 +524,7 @@ with themselves.
 
 
 ## Saved Variables of the Addon
+----
 
 The **Saved Variables** are datas saved between the game sessions, they are used to save the addons' configuration.
 
@@ -615,6 +624,7 @@ If you decided reset the saved variables, you also can do it like :
 
 
 ## The Localization
+----
 
 The property `_Locale` provided the features to control the localization.
 
@@ -675,5 +685,6 @@ end
 ```
 
 
-[PLoop]: https://github.com/kurapica/PLoop  "PLoop Lib"
-[Scorpio]: https://github.com/kurapica/Scorpio  "Scorpio Lib"
+[PLoop]: https://www.curseforge.com/wow/addons/PLoop  "PLoop Lib"
+[Scorpio]: https://www.curseforge.com/wow/addons/Scorpio  "Scorpio Lib"
+[Cube]: https://www.curseforge.com/wow/addons/igas-cube  "Cube Dev Tool"
