@@ -1,5 +1,40 @@
 # Asynchronous Framework & Task Schedule System
 
+## Use Cube to run code in game
+----
+
+Use file coding require lots of game reloading, we can use the [Cube][] to run codes in 
+the game for quick testing. You can process normal Lua codes, also the codes run by Scorpio:
+
+```lua
+Scorpio "ScorpioTest" ""
+
+__SystemEvent__()
+function UNIT_SPELLCAST_START(...)
+    print(...)
+end
+```
+
+But if you change the function, and run it again, you may find the result don't change, since
+the attribute like `__SystemEvent__` is use `__newindex` meta-method of the environment, when
+the function is defined, the system won't know a new function is defined by the same name, so
+we need set the function to nil before the function's redefintion:
+
+```lua
+Scorpio "ScorpioTest" ""
+
+UNIT_SPELLCAST_START = nil  -- So the `__newindex` can be triggered again
+
+__SystemEvent__()
+function UNIT_SPELLCAST_START(...)
+    print(...)
+end
+```
+
+
+## Asynchronous Framework
+----
+
 As an example to show how the asynchronous works, we take a simple example of count down:
 
 ``` lua
@@ -112,6 +147,7 @@ To meet the requirement, the asynchronous framewrok provided several features.
 
 
 ## Useful attributes
+----
 
 Besides the `__SystemEvent__` , `__SlashCmd__`, `__SecureHook__`, the system provided
 another three useful attributes(although there are dozens, but I don't think you need
@@ -253,6 +289,7 @@ call will cancel the previous call.
 
 
 ## Asynchronous Framework
+----
 
 When we use the `__Async__` mark a global function, it'll be processed in the
 coroutine, so we can yield it and resume it, but it's not easy for common authors.
@@ -451,6 +488,7 @@ With the `__Async__` and those APIs, it's very simple to keep all logic in one f
 
 
 ## Custom System Event
+----
 
 Besides the system event fired by the WOW itself, we also can fire custom events, it works
 like the system event, so we can use `__SystemEvent__`, `NextEvent`, `Wait` for those custom
@@ -486,6 +524,7 @@ Scorpio will receive it.
 
 
 ## Use Asynchronous APIs with Callback
+----
 
 Although the Scorpio recommend using the Asynchronous functions, we still can pass function to
 those APIs as callback:
@@ -523,6 +562,7 @@ end)
 
 
 ## Thread Pool & Task scheduling system
+----
 
 In normal Lua coding, creating and disposing the coroutines are very expensive, that's also
 why we normally use the callback not the coroutine(the coroutine is also a little hard for
@@ -583,5 +623,6 @@ end
 So, when another process is called, the previous will be finished.
 
 
-[PLoop]: https://github.com/kurapica/PLoop  "PLoop Lib"
-[Scorpio]: https://github.com/kurapica/Scorpio  "Scorpio Lib"
+[PLoop]: https://www.curseforge.com/wow/addons/PLoop  "PLoop Lib"
+[Scorpio]: https://www.curseforge.com/wow/addons/Scorpio  "Scorpio Lib"
+[Cube]: https://www.curseforge.com/wow/addons/igas-cube  "Cube Dev Tool"
