@@ -1,0 +1,70 @@
+# The Observable Pattern And Wow
+
+
+With [PLoop][] and [Scorpio][], we can use the obervable pattern in the Wow, it's a
+very powerful and simple solution to create data sources and handle the data sources.
+
+As an simple example, run this code in the [Cube][]:
+
+```lua
+Scorpio "Test" ""
+
+-- The style will be introduced in the [004.ui.md], we need it to bind the observable
+-- data source and the ui
+Style[UIParent] = {
+    -- here a fontstring will be created on the center of the screen
+    Label = {
+        location  = { Anchor("CENTER") },
+
+        -- Bind the label's text to an observable data source
+        text = Wow.FromEvent("UNIT_HEALTH") -- An observable generate from the UNIT_HEALTH event
+                :MatchUnit("player") -- A filter operation that only allow player
+                :Map(UnitHealth),    -- A map operation that change the unit -> health
+    }
+}
+```
+
+Go for a combat and lose some health, you will find your health points is dynamically 
+shown in the center of the screen(It won't shown when first loaded and the health is 
+unchagned, the real usages for unit data will be introduced in the 
+[UnitFrame.md](./006.unitframe.md)).
+
+We won't go deeper in the whole observable system in the Wow, if you are interesting, check
+the docs in the [PLoop](https://github.com/kurapica/PLoop).
+
+
+## Wow.FromEvent
+---
+
+The `Wow.FromEvent` is the root API to generate an observable data source based on the 
+system event(or custom sytem event). You can test those codes one by one:
+
+```lua
+-- print all event args of UNIT_HEALTH
+Scorpio.Wow.FromEvent("UNIT_HEALTH"):Subscribe(print)
+
+-- print the unit and its health
+Scorpio.Wow.FromEvent("UNIT_HEALTH"):Map(function(unit) return unit, UnitHealth(unit) end):Subscribe(print)
+
+-- only print player and its health
+Scorpio.Wow.FromEvent("UNIT_HEALTH"):MatchUnit("player"):Map(function(unit) return unit, UnitHealth(unit) end):Subscribe(print)
+
+-- Only print the BAG_UPDATE once per frame, The BAG_UPDATEA may occurs several times in the same time
+Scorpio.Wow.FromEvent("BAG_UPDATE"):Next():Subscribe(function() print("BAG_UPDATE", GetTime()) end))
+```
+
+1. For the event, `Wow.FromEvent` will return the same observable data source.
+
+2. We can use the observable's Subscribe method to bind any callbacks to receive the result dynamically.
+
+3. We can use `Map` to convert the result to other values, also we can pass multi values.
+
+4. For special unit events, we can use `MatchUnit` to filter the unit.
+
+
+
+
+
+[PLoop]: https://www.curseforge.com/wow/addons/PLoop  "PLoop Lib"
+[Scorpio]: https://www.curseforge.com/wow/addons/Scorpio  "Scorpio Lib"
+[Cube]: https://www.curseforge.com/wow/addons/igas-cube  "Cube Dev Tool"
