@@ -1,7 +1,7 @@
 ## Interface: 90100
 ## Title: [Lib] Scorpio
 ## Author: kurapica125@outlook.com
-## Version: v099
+## Version: v100
 ## Notes: Scorpio Addon FrameWork
 ## URL: http://github.com/kurapica/Scorpio
 ## Dependencies: PLoop
